# dofus-switcher

./: Cargo.toml  Makefile  README.md  breeds.css  index.html  list.sh  package-lock.json  package.json  pnpm-lock.yaml  styles.css  switcher.sh  tailwind.config.js
src/: App.css  App.tsx  app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  error.rs  group.rs  lib.rs  main.rs  settings.rs  shortcut.rs  tray.rs  window.rs
src-tauri/src/desktop/: mod.rs  x11.rs
