[package]
name = "dofus-switcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dofus_switcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x11rb = "0.13"
anyhow = "1.0.89"
toml = "0.8.19"
shellexpand = "3.1.0"
rdev = "0.5.3"
serde_with = "3.9.0"
enigo = "0.2.1"
arboard = "3.4.1"
lazy-regex = "3.3.0"

